# leetha

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: audit.yml  ci.yml  docker.yml  release.yml
docs/plans/: 2026-04-05-identity-fingerprint-migration-design.md
docs/wiki/: Active-Probing.md  Attack-Surface-Analysis.md  Authentication.md  CLI-Reference.md  Fingerprint-Sources.md  Getting-Started.md  Home.md  How-It-Works.md  Interface-Types-VPN-Capture.md  Notifications.md  PCAP-Import.md  Passive-Network-Discovery.md  Spoofing-Detection.md  Web-Dashboard.md
frontend/: build.sh  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
sensor/: Makefile
sensor/src/: buffer.rs  embedded.rs  main.rs  protocol.rs
spec/: conftest.py  test_connection_type.py  test_dhcp_anomaly_scheduling.py  test_import_pcap.py  test_notifications.py  test_stress.py  test_timeline.py  test_topology_api.py
spec/auth/: test_db_auth.py  test_middleware.py  test_middleware_requests.py  test_roles.py  test_tokens.py
spec/capture/: test_banner_matchers_extended.py  test_banner_parser.py  test_banner_ports.py  test_packets.py  test_parser_chain.py  test_remote_build.py  test_remote_build_e2e.py  test_remote_ssh.py  test_snmp_parser.py
spec/core/: test_new_pipeline.py  test_pipeline.py  test_pipeline_integration.py
spec/evidence/: test_engine.py  test_evidence_cap.py  test_models.py
spec/patterns/: test_compiled_matching.py  test_loader.py
src/leetha/: app.py  (+17 more)
(+486 files in other folders)
