[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leetha"
version = "0.1.0"
description = "Network host identification and threat surface analysis engine"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [{name = "tjnull"}]
requires-python = ">=3.11"
dependencies = [
    "scapy>=2.5",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "websockets>=12.0",
    "rich>=13.0",
    "aiohttp>=3.9",
    "aiosqlite>=0.19",
    "python-multipart>=0.0.6",
    "psutil>=5.9",
    "markdown>=3.4",
]

[project.scripts]
leetha = "leetha.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/leetha"]

[tool.hatch.build.targets.wheel.force-include]
"src/leetha/ui/web/dist" = "leetha/ui/web/dist"

[tool.pytest.ini_options]
testpaths = ["spec"]
asyncio_mode = "auto"

[dependency-groups]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff>=0.4", "httpx>=0.27"]
